--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ progress{
     justify-content: space-around;
     align-items: center;
     margin-top: 15px;
+    position: relative;
 }
 
 .icon-seta{
@@ -81,6 +82,9 @@ progress{
 
 .icon-play, .icon-pause{
     width: 50px;
+    position: absolute;
+    top: -10px;
+    left: 125px;
 }
 
 .icon-pause{
