--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+
+
 .img-main{
     width: 300px;
     height: 300px;
@@ -15,9 +17,10 @@ main{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
-    background: #333;
+    height: 100vh; 
     color: #ddd;
+    background: rgb(39, 29, 75);
+    
 }
 
 .descricao{
